src/components/CustomModal.module.scss
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.75);
  z-index: 5;
}

.content {
  position: absolute;
  max-width: 50%;
  top: 50%;
  left: 50%;
  height: auto;
  transform: translate(-50%, -50%);
  position: fixed;
  overflow: visible;

}

.inner {
  max-height: calc(100vh - 6rem);
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-color: #fff;
}

.closeButton {
  cursor: pointer;
  color: #fff;
  font-size: 2rem;

  position: absolute;
  right: 0;
  top: -.5em;
  transform: translateY(-100%);
}

